--- a/pages/datenschutzerklarung.html
+++ b/pages/datenschutzerklarung.html
@@ -22,6 +22,7 @@
                 <li><a href="/pages/kontakt.html">Kontakt</a></li>
                 <li class="selected"><a href="/pages/datenschutzerklarung.html">Datenschutzerklärung</a></li>
                 <li><a href="/pages/download.html">Download</a></li>
+                <li><a href="../hilfe/index.html">Hilfe</a></li>
             </ul>
         </nav>
         <div class="header_box">
