--- a/home.html
+++ b/home.html
@@ -45,10 +45,10 @@
 <p>Mit Kurvenprofi können praktisch alle zweidimensionalen Grafen der Schulmathematik maßstabsgerecht gezeichnet werden. Das Programm hat viele interaktive Möglichkeiten (Tangente, Normale, Krümmung) um selbstständiges Lernen und experimentieren zu ermöglichen.</p>
 <h1>Besondere Eigenschaften:</h1>
 <ul>
-<li>Kostenfreie Vollversion für die private Nutzung oder die Nutzung in Schulen
-<em>Algebraische Ableitung und numerisches Integral
-</em>Zeichnen von beliebig vielen Graphen und Punkten abhängig von beliebig vielen Parametern
-*Viele neue Eigenschaften lassen die Nutzung für Blinde und Sehbehinderte zu.<ul>
+<li>Kostenfreie Vollversion für die private Nutzung oder die Nutzung in Schulen</li>
+<li>Algebraische Ableitung und numerisches Integral</li>
+<li>Zeichnen von beliebig vielen Graphen und Punkten abhängig von beliebig vielen Parametern</li>
+<li>Viele neue Eigenschaften lassen die Nutzung für Blinde und Sehbehinderte zu.<ul>
 <li>Ausgabe eines Tons, dessen Tonhöhe den y-Wert oder die Steigung des Graphen wiedergibt</li>
 <li>Ausgabe des Graphen als Text, der über die Baillezeile gelesen werden kann.</li>
 </ul>
