--- a/sek2/index.html
+++ b/sek2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html lang = "de">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
   <title>Sch&uuml;lerfachwahl</title>
