--- a/sek2/index.html
+++ b/sek2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang = "de">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <title>Sch&uuml;lerfachwahl</title>
   <link rel='stylesheet' type='text/css' href='css/fachwahl.css'/>
   <script type="text/javascript" src="js/config.js"></script>
