--- a/sek2/index.html
+++ b/sek2/index.html
@@ -2,7 +2,7 @@
 <html lang = "de">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <title>Sch&uuml;lerfachwahl</title>
+  <title>Schülerfachwahl</title>
   <link rel='stylesheet' type='text/css' href='css/fachwahl.css'/>
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/fachwahl.js"></script>
